--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -31,7 +31,7 @@
                 <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
               </ul>
               <h1>{{product.title}}</h1>
-              <p class="text-muted lead">${{product.price}}</p>
+              <p class="text-muted lead">₹{{product.price}}</p>
               <p class="text-small mb-4">{{product.short_description}}</p>
 
               <div class="row align-items-stretch mb-4">
@@ -142,7 +142,7 @@
                       </div>
                     </div>
                     <h6> <a class="reset-anchor" href="{% url 'store:product-detail' rp.slug %}">{{rp.title}}</a></h6>
-                    <p class="small text-muted">${{rp.price}}</p>
+                    <p class="small text-muted">₹{{rp.price}}</p>
                   </div>
                 </div>
 
