Update chat.html to center query

--- a/templates/store/chat.html
+++ b/templates/store/chat.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 {#    <div class="col-md-6">#}
+      <br>
+      <br>
+      <br>
 
       <div class="text-center py-5">
             <h3 class="mb-3">Ask your queries here!.</h3>
@@ -9,7 +12,7 @@
           <br>
 
 
-  <div class="col-md-6">
+  <div class="col-md-6 mx-auto">
        <form id="chat-form">
             <div class="input-group">
               <input type="search" id="chat-input" class="form-control rounded" placeholder="How cycling help my body health?" aria-label="Search" aria-describedby="search-addon" />
